fix(link): correct white space management

--- a/packages/link/src/link.css
+++ b/packages/link/src/link.css
@@ -11,3 +11,7 @@ governing permissions and limitations under the License.
 */
 
 @import './spectrum-link.css';
+
+:host {
+    display: inline;
+}
